Fixes #77 - Java 8 compatibility.
Updated dependencies for ALPN.
Updated usage of Java 11 API back to Java 8 APIs.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>